--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
                             </li>
                             <li>
                                 ifulicn-gitio中转页
-                                <a href="https://ifulicnxyz.github.io/" target="_blank"><i>https://ifulicnxyz.github.io/</i></a>
+                                <a href="https://ifulixyz.github.io/" target="_blank"><i>https://ifulixyz.github.io/</i></a>
                                 </span></span>
                             </li>
                             <li>
