--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
             display: block;
             font-size: 15px;
             color: #000;
-            line-height: 1.8em;
+            line-height: 1em;
             padding: 1em 0 1em 1em;
             border-bottom: 1px solid #e2e0de
         }
@@ -381,7 +381,7 @@
             }
         }
 
-        @media (max-width:600px) {
+        @media (max-width:700px) {
             .main h1 {
                 font-size: 30px
             }
@@ -539,6 +539,16 @@
                             <li>
                                 ifulicn-gitio中转页
                                 <a href="https://ifulixyz.github.io/" target="_blank"><i>https://ifulixyz.github.io/</i></a>
+                                </span></span>
+                            </li>
+                            <li>
+                                精华音乐资源磁力版-全选复制批量下载
+                                <a href="https://www.ifulicn.org/music.txt" target="_blank"><i>https://www.ifulicn.org/music.txt</i></a>
+                                <a href="https://ifulixyz.github.io/music.txt" target="_blank"><i>https://ifulixyz.github.io/music.txt</i></a>
+                                </span></span>
+                                两性健康情感教育-全选复制批量下载
+                                <a href="https://www.ifulicn.org/edu.txt" target="_blank"><i>https://www.ifulicn.org/edu.txt</i></a>
+                                <a href="https://ifulixyz.github.io/edu.txt" target="_blank"><i>https://ifulixyz.github.io/edu.txt</i></a>
                                 </span></span>
                             </li>
                             <li>
